--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,13 +1,13 @@
-#spring.datasource.url=jdbc:mysql://35.198.2.203:3306/spring_db_app_01?useSSL=false
-#spring.datasource.username=root
-#spring.datasource.password=!@hostmysql
+spring.datasource.url=jdbc:mysql://db4free.net/gen_database?useSSL=false
+spring.datasource.username=gen_user
+spring.datasource.password=gen12345
 #spring.datasource.url=jdbc:mysql://remotemysql.com:3306/pmlWOH47Sp?useSSL=false
 #spring.datasource.username=pmlWOH47Sp
 #spring.datasource.password=OVArjapvxv
 
-spring.datasource.url=jdbc:mysql://localhost:3307/gen_database?useSSL=false
-spring.datasource.username=root
-spring.datasource.password=password
+#spring.datasource.url=jdbc:mysql://localhost:3307/gen_database?useSSL=false
+#spring.datasource.username=root
+#spring.datasource.password=password
 
 # create or none
 spring.jpa.hibernate.ddl-auto=none
