--- a/pom.xml
+++ b/pom.xml
@@ -3,13 +3,13 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.nelioalves.cursomc</groupId>
-	<artifactId>cursomc</artifactId>
+	<groupId>com.backend.gen</groupId>
+	<artifactId>gen</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
 	<name>cursomc</name>
-	<description>Curso Spring Boot Professor Nelio Alves</description>
+	<description>App Generico Spring Boot - Sergio Santos</description>
 
 	<parent>
 		<groupId>org.springframework.boot</groupId>
